tests/parser/errors/empty_index.mochi
let a = [1, 2]
let x = a[]
